--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.ruff]
 target-version = "py310"
-line-length = 200 # TODO
+line-length = 120
 src = ["src"]
 force-exclude = true
 exclude = []
