--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ ignore = [
 ]
 "tests/test_*.py" = ["S101"]
 "*/tests/test_*.py" = ["S101"]
+"*/templates/runner/runner.py" = ["I001"]
 
 
 [tool.ruff.lint.pycodestyle]
