--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,84 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[project]
+name = "dhenara-agent"
+dynamic = ["version"]
+description = "Dhenara Agent DSL (DAD) Framework SDK"
+readme = "README.md"
+license = "MIT"
+requires-python = ">=3.10"
+authors = [
+    {name = "Dhenara Inc", email = "support@dhenara.com"},
+]
+keywords = ["ai", "llm", "agent", "framework"]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
+    "Operating System :: OS Independent",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "License :: OSI Approved :: MIT License",
+]
+dependencies = [
+    "dhenara-ai>=1.0.2",
+    "click>=8.0.0",
+    "pyyaml>=6.0",
+    "httpx>=0.24.0",
+    "requests>=2.25.1",
+    "pydantic>=2.0.0",
+    "opentelemetry-api>=1.20.0",
+    "opentelemetry-sdk>=1.20.0",
+    "opentelemetry-instrumentation>=0.40b0",
+    "opentelemetry-exporter-otlp>=1.20.0",
+    "opentelemetry-exporter-zipkin",
+]
+
+[project.optional-dependencies]
+observability = [
+    "opentelemetry-exporter-jaeger>=1.20.0",
+]
+dev = [
+    "pytest>=7.0.0",
+    "pytest-asyncio>=0.18.0",
+    "pytest-cov>=3.0.0",
+]
+
+[project.urls]
+Homepage = "https://dhenara.com"
+Documentation = "https://docs.dhenara.com/"
+"Bug Reports" = "https://github.com/dhenara/dhenara-agent/issues"
+"Source Code" = "https://github.com/dhenara/dhenara-agent"
+
+[project.scripts]
+dhenara = "dhenara.cli:main"
+dad = "dhenara.cli:main"
+
+[tool.hatch.version]
+path = "src/dhenara/agent/__init__.py"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/dhenara"]
+
+[tool.hatch.build.targets.wheel.force-include]
+"src/dhenara/cli/templates" = "dhenara/cli/templates"
+
+[tool.hatch.build.targets.sdist]
+include = [
+    "src/dhenara",
+    "README.md",
+    "examples",
+]
+
+[tool.uv]
+venv = ".venv"
+
 [tool.ruff]
 target-version = "py310"
 line-length = 120
